# windows-task-scheduler

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: com.rs  error.rs  idle_settings.rs  lib.rs  principal.rs  registration_info.rs  task.rs  task_definition.rs  task_folder.rs  task_service.rs  task_settings.rs  time_trigger.rs  trigger.rs  trigger_collection.rs
