[package]
name = "task_scheduler"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = [
    "combaseapi", 
    "winerror", 
    "objbase", 
    "rpcdce", 
    "taskschd", 
    "wtypesbase",
    "oaidl",
    "impl-default"]}

[[bin]]
name = "test_task"
path = "src/bin/main.rs"