[package]
name = "task_scheduler"
version = "0.1.1"
authors = ["arthmis <arthmis20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = [
    "combaseapi", 
    "winerror", 
    "objbase", 
    "rpcdce", 
    "taskschd", 
    "wtypesbase",
    "oaidl",
    "impl-default",
    "impl-debug"]}
log = "0.4.11"
chrono = "0.4"

[[bin]]
name = "test_task"
path = "src/bin/main.rs"