[package]
name = "task_scheduler"
version = "0.3.0"
authors = ["arthmis <arthmis20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.9"
bindings = { path = "bindings" }
log = "0.4.11"
chrono = "0.4"

[[bin]]
name = "test_task"
path = "src/bin/main.rs"